# sol-xen

./: .env  .env.example  .env.example.xolana  .gitignore  Anchor.toml  Cargo.toml  README.md  deploy.sh  deploy_new_minter.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
admin/: init_miner.ts  init_minter.js  init_minter.ts  relinquish_mint_control.ts
app/sol-xen-client/: Cargo.toml
app/sol-xen-client/src/: main.rs
app/sol-xen-multiminer/: Cargo.toml
app/sol-xen-multiminer/src/: main.rs
app/sol-xen-reader/: Cargo.toml
app/sol-xen-reader/src/: main.rs
app/sol-xen-tgvminer/: Cargo.toml
app/sol-xen-tgvminer/src/: main.rs
client/: admin.js  admin.ts  autominter.js  autominter.ts  init_minter.ts  listener.js  listener.ts  miner.js  miner.ts  minter.js  minter.ts  multiminer.js  multiminer.ts  runner.js  runner.ts  user.js  user.ts
programs/sol-xen/: Cargo.toml
programs/sol-xen-miner/: Cargo.toml
programs/sol-xen-miner/src/: lib.rs
programs/sol-xen-minter/: Cargo.toml
programs/sol-xen-minter/src/: lib.rs
programs/sol-xen/src/: lib.rs
src/: index.ts
tests/: sol-xen.ts
utils/: block_scanner.sh
